--- a/hex-clock/resources/styles.css
+++ b/hex-clock/resources/styles.css
@@ -39,7 +39,7 @@
   text-anchor: start;
   x: 4%;
   y: 37%;
-  fill: black
+  fill: aqua
 }
 
 #hexLabel {
@@ -48,8 +48,8 @@
   text-length: 80;
   text-anchor: start;
   x: 4%;
-  y: 55%;
-  fill: black;
+  y: 57%;
+  fill: aqua;
   text-decoration: underline;
 }
 
@@ -57,15 +57,15 @@
   font-size: 100;
   font-family: FBNucleon-Bold;
   text-length: 80;
-  text-anchor: middle;
-  x: 55%;
-  y: 55%;
-  fill: black;
+  text-anchor: start;
+  x: 28%;
+  y: 57%;
+  fill: aqua;
 }
 
 #stepsIcon {
-  x: 48%;
-  y: 65%;
+  x: 46%;
+  y: 66%;
   width: "35";
   height: "25";
   fill: black; 
@@ -77,14 +77,14 @@
   font-family: System-Bold;
   text-length: 80;
   text-anchor: start;
-  x: 62%;
-  y: 72%;
+  x: 60%;
+  y: 73%;
   fill: black
 }
 
 #tempIcon {
-  x: 51%;
-  y: 75%;
+  x: 49%;
+  y: 76%;
   width: "16";
   height: "29";
   fill: black;
@@ -95,14 +95,14 @@
   font-family: System-Bold;
   text-length: 128;
   text-anchor: start;
-  x: 62%;
-  y: 82%;
+  x: 60%;
+  y: 83%;
   fill: black;
 }
 
 #batteryIcon {
-  x: 48%;
-  y: 87%;
+  x: 46%;
+  y: 88%;
   width: "35";
   height: "20";
   fill: black; 
@@ -114,7 +114,7 @@
   font-family: System-Bold;
   text-length: 80;
   text-anchor: start;
-  x: 62%;
-  y: 92%;
+  x: 60%;
+  y: 93%;
   fill: black
 }
