--- a/hex-clock/resources/styles.css
+++ b/hex-clock/resources/styles.css
@@ -48,7 +48,7 @@
   text-length: 80;
   text-anchor: start;
   x: 4%;
-  y: 56%;
+  y: 188;
   fill: aqua;
 }
 
@@ -57,8 +57,8 @@
   font-family: FBNucleon-Bold;
   text-length: 80;
   text-anchor: start;
-  x: 27%;
-  y: 56%;
+  x: 91;
+  y: 188;
   fill: aqua;
 }
 
